tests/paczka1/fuzzy1/61602922.err
Error in line 4: s78IU2JBu A231 65,2
Error in line 13: ip98 A231 0,5
Error in line 10: A642 A642 97,0
